--- a/main_page.css
+++ b/main_page.css
@@ -104,6 +104,7 @@ body {
     text-align: end;
     text-decoration: none;
     margin-top: -150px;
+    position: fixed;
 }
 
 .test-four nav ul {
