--- a/main_page.css
+++ b/main_page.css
@@ -104,6 +104,7 @@ body {
     text-align: end;
     text-decoration: none;
     margin-top: -150px;
+    overflow: hidden;
     
 }
 
@@ -112,7 +113,7 @@ body {
     list-style: none;
     padding: 0;
     margin: 0;
-    position: fixed;
+    
     text-decoration: none;
     display: inline-block;
 }
