--- a/For Phone/Home_page.css
+++ b/For Phone/Home_page.css
@@ -44,7 +44,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    
+    zoom: 1.6;
     margin-right: 40px;
     margin-bottom: 20px;
     /* Aligns to the bottom */
