--- a/For Phone/Home_page.css
+++ b/For Phone/Home_page.css
@@ -11,6 +11,11 @@
     height: 850px;
 }
 
+.play-that {
+    /* this is for the test subject */
+    margin: 20px;
+}
+
 .test-two {
     /* this is for the main text */
     font-size: 120px;
