--- a/For Phone/Home_page.css
+++ b/For Phone/Home_page.css
@@ -1,23 +1,67 @@
-/* this is for the test header */
+/* this is the for the scrollbar update do not touch except you concentrate */
 
-@media (-webkit-browser) {
-    /* Chrome and Safari */
+::-webkit-scrollbar {
+    /* first upadate */
+    width: 12px;
+    /* set scrollbar width */
+    height: 12px;
+    /* height of the scrollbar */
+    background-color: white;
+    /* this is the bg of the scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+    /* the border raduis of the scrollbar */
+    background-color: white;
+    /* the scrollbar thumb color */
+    border-radius: 10px;
+    /* this is the scrolbar border raduis */
+}
+
+
+/* this is for incase it is access by firefox */
+
+* {
+    scrollbar-width: thin;
+    /* set scrollbar width */
+    scrollbar-color: white #1f1702;
+    /* this is the bg of the scrollbar */
+}
+
+body {
+    scrollbar-color: white #1f1702;
+    /* this is for the scrollbar thumb color */
+    scrollbar-width: thin;
+    /* Scrollbar width */
+}
+
+
+/* optional: Override scrollbar styling for both browsers */
+
+
+/* Chrome and Safari */
+
+@media (chrome) and (version >=62) {
      ::-webkit-addressbar {
         background-color: #1f1702;
         /* Red color */
     }
 }
 
-@media (-moz-browser) {
-    /* Firefox */
+
+/* Firefox */
+
+@media (firefox) and (version >=60) {
      ::-moz-addressbar {
         background-color: #1f1702;
         /* Red color */
     }
 }
 
-@media (-webkit-browser) and (-webkit-version >=602) {
-    /* Safari 10+ */
+
+/* Safari 10+ */
+
+@media (safari) and (version >=10) {
      ::-webkit-addressbar {
         background-color: #1f1702;
         /* Red color */
@@ -95,8 +139,9 @@
 }
 
 .main-container {
-    padding-bottom: 100000px;
-    background-color: white;
+    padding-bottom: 1000px;
+    background-color: black;
+    margin: 0;
     left: 0;
     top: 1000px;
     width: 100%;
@@ -104,8 +149,10 @@
 }
 
 .test-infix {
-    position: absolute;
+    /* this is for the constant image */
+    position: fixed;
     right: 0;
+    /* Aligns to the bottom */
 }
 
 .test-seven {
