--- a/For Phone/Home_page.css
+++ b/For Phone/Home_page.css
@@ -167,6 +167,40 @@ body {
     margin-top: -50px;
 }
 
+.plat-one {
+    /* this is for the sub heading */
+    font-size: 25px;
+    color: white;
+    margin-left: 50px;
+    margin-top: -30px;
+}
+
+.plat-three {
+    /* this is sub topic settings */
+    font-size: 25px;
+    color: white;
+    margin-left: 50px;
+    margin-top: -20px;
+}
+
+.plat-two {
+    /* this is for the botton adjustment of the code */
+    width: 300px;
+    height: 50px;
+    margin-left: 45px;
+    margin-top: -10px;
+    font-size: 20px;
+    color: black;
+    border-radius: 20px;
+    background: url("./Pictures/play-text.jpg")
+}
+
+.plat-two::placeholder {
+    text-align: center;
+    color: black;
+    font-size: 20px;
+}
+
 .test-infix {
     /* this is for the constant image */
     position: fixed;
