--- a/main_page.css
+++ b/main_page.css
@@ -232,11 +232,81 @@ body {
     margin-top: -40px;
 }
 
+.type-test {
+    zoom: 0.2;
+    margin-bottom: -17px;
+}
+
+.type-three {
+    width: 110px;
+    height: 60px;
+    border-radius: 20px;
+    border-width: 0px;
+    background-color: #c4c4c4;
+    color: black;
+    font-size: 18px;
+}
+
+.type-two {}
+
+.type-two nav ul {}
+
+.type-two li {
+    list-style: none;
+    display: inline-block
+}
+
+.type-four {
+    width: 110px;
+    height: 60px;
+    margin-left: 20px;
+    border-radius: 20px;
+    border-width: 0px;
+    background-color: black;
+    color: white;
+    font-size: 18px;
+}
+
+.type-one {
+    /* this is the edit text */
+    width: 350px;
+    height: 60px;
+    font-size: 20px;
+    color: purple;
+    text-align: center;
+    margin-top: -10px;
+    border-width: 1px;
+    border-radius: 20px;
+    border-color: purple;
+}
+
+.type-one::placeholder {
+    text-align: start;
+    font-size: 20px;
+    margin-left: 20px;
+    color: #c5adc6;
+}
+
+.type-one:active {
+    border-color: purple;
+    border-width: 1px;
+    /* Adjust the width as needed */
+    border-style: solid;
+}
+
+.type-one:focus {
+    border-color: purple;
+}
+
+.type-one:hover {
+    border-color: purple;
+}
+
 .place-three {
     /* this is for the second image positioning */
     position: absolute;
     right: 0;
-    margin-top: -120px;
+    margin-top: -240px;
     margin-right: 30px;
     border-radius: 20px;
 }
