--- a/For Phone/Home_page.css
+++ b/For Phone/Home_page.css
@@ -185,12 +185,13 @@ body {
 
 .plat-two {
     /* this is for the botton adjustment of the code */
-    width: 500px;
-    height: 100px;
+    width: 570px;
+    height: 120px;
     margin-left: 45px;
     margin-top: -20px;
-    font-size: 20px;
+    font-size: 35px;
     color: black;
+    border-width: 5px;
     border-radius: 20px;
     background: url("./Pictures/play-text.jpg")
 }
@@ -198,7 +199,7 @@ body {
 .plat-two::placeholder {
     text-align: center;
     color: black;
-    font-size: 20px;
+    font-size: 32px;
 }
 
 .test-infix {
@@ -210,7 +211,7 @@ body {
 
 .type-one {
     margin-left: 30px;
-    zoom: 1.5;
+    zoom: 1.7;
     margin-top: 40px;
     border-radius: 20px;
 }
