--- a/main_page.css
+++ b/main_page.css
@@ -275,6 +275,7 @@ body {
     color: purple;
     text-align: center;
     margin-top: -10px;
+    margin-left: -3px;
     border-width: 1px;
     border-radius: 20px;
     border-color: purple;
