--- a/main_page.css
+++ b/main_page.css
@@ -215,21 +215,31 @@ body {
     background-color: white;
 }
 
+.sample-one {
+    zoom: 1.5;
+    width: 700px;
+    height: 200px;
+    margin-left: 20px;
+    border-width: 0px;
+    margin-top: 20px;
+    background: url('./Pictures/sample-class.gif') no-repeat;
+}
+
 .place-one {
     /* this is the first placement */
-    margin-top: 150px;
+    margin-top: 130px;
+    margin-left: 10px;
     font-weight: bolder;
-    font-size: 40px;
-    margin-left: 50px;
+    font-size: 25px;
 }
 
 .place-two {
     /* this is another test */
     font-weight: bolder;
+    margin-left: 10px;
     font-size: 30px;
-    font-size: 40px;
-    margin-left: 50px;
-    margin-top: -40px;
+    font-size: 25px;
+    margin-top: -30px;
 }
 
 .type-test {
@@ -237,10 +247,16 @@ body {
     margin-bottom: -17px;
 }
 
+.type-class {
+    zoom: 0.3;
+    margin-bottom: -17px;
+}
+
 .type-three {
     width: 110px;
     height: 60px;
     border-radius: 20px;
+    margin-left: -40px;
     border-width: 0px;
     background-color: #c4c4c4;
     color: black;
@@ -253,6 +269,7 @@ body {
 
 .type-two li {
     list-style: none;
+    zoom: 0.7;
     display: inline-block
 }
 
@@ -278,6 +295,7 @@ body {
     margin-left: -3px;
     border-width: 1px;
     border-radius: 20px;
+    background-color: transparent;
     border-color: purple;
 }
 
@@ -307,7 +325,7 @@ body {
     /* this is for the second image positioning */
     position: absolute;
     right: 0;
-    margin-top: -240px;
+    margin-top: -280px;
     margin-right: 30px;
     border-radius: 20px;
 }
@@ -323,8 +341,8 @@ body {
 
 .place-five {
     /* this is for the five text */
-    margin-left: 50px;
-    font-size: 20px;
+    font-size: 15px;
+    margin-left: 10px;
     font-style: italic;
     font-weight: 500;
     margin-top: -20px;
