--- a/For Phone/Home_page.css
+++ b/For Phone/Home_page.css
@@ -99,7 +99,7 @@ body {
     font-size: 120px;
     font-style: italic;
     font-weight: bold;
-    margin-top: -150px;
+    margin-top: -140px;
     color: rgb(228, 213, 213);
     margin-left: 100px;
 }
@@ -125,9 +125,9 @@ body {
 }
 
 .line-one {
-    margin-top: 100px;
-    margin-left: 20px;
-    zoom: 1.2;
+    margin-top: 70px;
+    margin-left: -30px;
+    zoom: 1.6;
 }
 
 .line-one nav ul {}
@@ -139,7 +139,7 @@ body {
 
 .signal-loc {
     text-align: center;
-    margin-left: 500px;
+    margin-left: 300px;
     margin-top: -120px;
 }
 
@@ -157,6 +157,60 @@ body {
     border-bottom: 2px solid #ad8311;
     padding-bottom: 10px;
     text-decoration: none;
+}
+
+.num-three {
+    color: white;
+    font-size: 60px;
+    margin-left: 80px;
+    margin-top: -170px
+}
+
+.num-three nav ul {}
+
+.num-three li {
+    list-style: none;
+    display: inline;
+    padding: 20px;
+}
+
+.num-four {
+    color: #ad8311;
+    font-size: 22px;
+    margin-top: -70px;
+    margin-left: 90px;
+}
+
+.num-four nav ul {}
+
+.num-four li {
+    list-style: none;
+}
+
+.num-five {
+    color: #ad8311;
+    font-size: 22px;
+    margin-top: -100px;
+    margin-left: 235px;
+}
+
+.num-five nav ul {}
+
+.num-five li {
+    list-style: none;
+}
+
+.num-six {
+    color: #ad8311;
+    font-size: 22px;
+    margin-top: -100px;
+    margin-left: 405px;
+}
+
+.num-six nav ul {}
+
+.num-six li {
+    list-style: none;
 }
 
 .header-container {
@@ -220,7 +274,7 @@ body {
 
 .plat-two {
     /* this is for the botton adjustment of the code */
-    width: 570px;
+    width: 450px;
     height: 120px;
     margin-top: -20px;
     font-size: 35px;
