--- a/For Phone/Home_page.css
+++ b/For Phone/Home_page.css
@@ -89,7 +89,7 @@ body {
     font-size: 120px;
     font-style: italic;
     font-weight: bold;
-    margin-top: 30px;
+    margin-top: 10px;
     color: rgb(228, 213, 213);
     margin-left: 100px;
 }
@@ -139,7 +139,7 @@ body {
 
 .signal-loc {
     text-align: center;
-    margin-left: 380px;
+    margin-left: 430px;
     margin-top: 0px;
 }
 
@@ -176,8 +176,8 @@ body {
 
 .num-four {
     color: #ad8311;
-    font-size: 21px;
-    margin-top: -70px;
+    font-size: 18px;
+    margin-top: -55px;
     margin-left: 75px;
 }
 
@@ -189,8 +189,8 @@ body {
 
 .num-five {
     color: #ad8311;
-    font-size: 21px;
-    margin-top: -98px;
+    font-size: 18px;
+    margin-top: -80px;
     margin-left: 230px;
 }
 
@@ -202,8 +202,8 @@ body {
 
 .num-six {
     color: #ad8311;
-    font-size: 21px;
-    margin-top: -98px;
+    font-size: 18px;
+    margin-top: -80px;
     margin-left: 400px;
 }
 
@@ -249,7 +249,6 @@ body {
 .place-two {
     /* this is another test */
     font-weight: bolder;
-    font-size: 30px;
     color: white;
     font-size: 50px;
     margin-left: 50px;
@@ -276,17 +275,19 @@ body {
     /* this is for the botton adjustment of the code */
     width: 450px;
     height: 120px;
+    text-align: center;
     margin-top: -20px;
     font-size: 35px;
-    color: black;
+    color: white;
     border-width: 5px;
+    border-color: white;
     border-radius: 20px;
-    background: url("./Pictures/play-text.jpg")
+    background-color: transparent;
 }
 
 .plat-two::placeholder {
     text-align: center;
-    color: black;
+    color: #cdcaca;
     font-size: 32px;
 }
 
@@ -304,6 +305,48 @@ body {
     zoom: 1.7;
     margin-top: 40px;
     border-radius: 20px;
+}
+
+.par-one {
+    color: white;
+    font-size: 39px;
+    margin-left: 30px;
+    margin-top: 100px;
+    font-weight: bolder;
+}
+
+.par-two {
+    color: white;
+    font-size: 39px;
+    margin-left: 170px;
+    margin-top: -35px;
+    font-weight: bolder;
+}
+
+.par-three {
+    color: white;
+    font-size: 39px;
+    margin-left: 250px;
+    margin-top: -40px;
+    font-weight: bolder;
+}
+
+.par-four {
+    margin-left: 170px;
+    margin-top: -10px;
+}
+
+.par-four nav ul {}
+
+.par-four li {
+    display: inline;
+    list-style: none;
+}
+
+.par-five {
+    border-radius: 20px;
+    width: 250px;
+    height: 80px;
 }
 
 .try-three {}
@@ -330,6 +373,7 @@ body {
     height: 120px;
     font-size: 30px;
     color: white;
+    border-color: white;
     background-color: black;
     border-radius: 20px;
 }
